Fix issue #18 where comparing revisions resulted in text overflowing the container

--- a/VersionControl.css
+++ b/VersionControl.css
@@ -191,6 +191,7 @@ body.template-admin .field-revisions .ui-state-active {
     left: 1.25%;
     width: 97.5%;
     margin-top: 1em;
+    white-space: normal;
     border: 1px solid #ccc;
     box-shadow: 1px 2px 2px rgba(0,0,0,0.1);
 }
